$Date$

VEGAN RELEASE VERSIONS at http://cran.r-project.org/

Version 2.0-4 (opened March 9, 2012)

	* merge r2167: warn about unequal aspect ratio in ordiplot3d.
	* merge r2162: set equal axis scales for ordiplot3d.
	* merge r2156: betadisper example adapted for default spatial
	median. 
	* merge r2150: monoMDS checks that the number of dissimilarities
	is sufficient for the requested analysis. The decostand.Rd fix of
	r2150 was not yet merged.
	* merge r2149: drarefy & rrarefy check that input data are
	integers. 
	* merge r2148 (partial): format references. However, scoverage()
	was not merged yet, and its changes have not been merged.
	* merge r2144: hiersimu and multipart do not assume constant
	gamma.  Similar change was made in r2132 to adipart.
	* merge r2143: formula method for adipart/hiersimu/multipart.
	NAMESPACE needed manual merge (edited patch from diff).
	* merge r2139: clamtest coverage threshold fix.
	* merge r2137: explain data transformation in pyrifos.Rd.
	* merge r2135: print.adipart displays null model method.
	* merge r2132: adipart bug fix: assumed constant gamma in
	permutations. 
	* merge r2129: envfit failed with empty factor levels.
	* merge r2128: anova(<prc-object>, by = ...) failed.
	* merge r2127: more configurable msoplot.
	* merge r2125: typo in anova.cca.Rd.
	* merge r2123: r2121 for adonis.
	* merge r2121: doc location/dispersion mix-up in simper, mrpp &
	anosim. 
	
Version 2.0-3 (released March 3, 2012)

	* merge r2115: simper fixes from github EDiLD/vegan pull request
	#6 by Eduard Szöcs (proportions instead of percentages etc.)
	* merge r2113: tweak simper.Rd formatting.
	* commit r2112: deactivate permutation tests in simper.
	* merge r2110: centroids.cca fix for 2-level factors as the only
	constraint.
	* merge r2106: merge scores and vegdist doc updates from github.
	* merge r2105: pacify -pedantic C compiler in vegdist.
	* merge r2104: add Cao index in vegdist.
	* merge r2103: fix bug in permutation p-values in simper.