@@ -39,13 +39,13 @@ et al. 2011 and <span class="pkg">vegan</span> help page.
 <li> <p><code>envfit</code> failed with unused factor levels.
 </p>
 </li>
-<li><p> Equal aspect ratio cannot be forced to <code>ordiplot3d</code>
-because underlying core routines do not allow this. Now
-<code>ordiplot3d</code> sets equal axis ranges, and the documents
-urge users to verify that the results the aspect ratio is
+<li><p> Equal aspect ratio cannot be set exactly in
+<code>ordiplot3d</code> because underlying core routines do not allow
+this. Now <code>ordiplot3d</code> sets equal axis ranges, and the
+documents urge users to verify that the aspect ratio is
 reasonably equal and the graph looks like a cube.
 </p>
-</li></ul>
+</ul>
 
 
 
@@ -64,10 +64,16 @@ describing the hierarcy is missing, the method gives an
 overall partitioning to alpha, beta and gamma diversities.
 </p>
 </li>
+<li> <p><code>bioenv</code> accepts dissimilarities or square matrices
+that can be interpreted as dissimilarities as an alternative to
+community data.  This allows using other dissimilarities than
+those available in <code>vegdist</code>.
+</p>
+</li>
 <li> <p><code>msoplot</code> is more configurable, and allows, for
 instance, setting y-axis limits.
 </p>
-</li></ul>
+</ul>
 
  
 
@@ -104,7 +110,7 @@ species.  The code was developed in
 <a href="https://github.com/jarioksa/vegan">GitHub</a>
 by Eduard Szöcs (Uni Landau, Germany).
 </p>
-</li></ul>
+</ul>
 
  
 
@@ -136,7 +142,7 @@ requested axes was higher than the ordination object had.  This
 was reported as an error in <code>ordiplot</code> in
 <a href="https://stat.ethz.ch/pipermail/r-sig-ecology/2012-February/002768.html">R-sig-ecology</a> mailing list.
 </p>
-</li></ul>
+</ul>
 
  
 
@@ -177,7 +183,7 @@ data with high beta diversity and variable sampling
 intensity. Thanks to consultation to Yong Cao (Univ Illinois,
 USA).
 </p>
-</li></ul>
+</ul>
 
  
 
@@ -219,7 +225,7 @@ following fixing of the first bug. In fixing both bugs, a
 speed-up in the internal f.test() function is fully
 realised. Reported by Nicholas Lewin-Koh.
 </p>
-</li></ul>
+</ul>
 
   
 
@@ -239,7 +245,7 @@ coordinates to which the points were connected.  Typically these
 are class centroids of each point, but for constrained ordination
 with no <code>groups</code> they are the LC scores.
 </p>
-</li></ul>
+</ul>
 		 
   
 
@@ -280,7 +286,7 @@ follows Chase et al. (2011) <EM>Ecosphere</EM> 2:art24
 [<a href="http://www.esajournals.org/doi/abs/10.1890/ES10-00117.1">doi:10.1890/ES10-00117.1</a>],
 and was developed with the consultation of Brian Inouye.
 </p>
-</li></ul>
+</ul>
 
  
 
@@ -319,7 +325,7 @@ changed to adapt to this change (<code>rda</code>, <code>capscale</code>,
 results but you probably wish to upgrade <span class="pkg">vegan</span> to avoid
 annoying warnings.
 </p>
-</li></ul>
+</ul>
 	
  
 
@@ -334,7 +340,7 @@ to optimize the statistic for tied column frequencies. Tracing
 showed that in most cases an improved ordering was found rather
 early in tries, and the results are equally good in most cases.
 </p>
-</li></ul>
+</ul>
 
  
 
@@ -370,7 +376,7 @@ schemes. All <span class="pkg">vegan</span> permutation will gradually move to u
 <span class="pkg">permute</span>, but currently only <code>betadisper</code> uses the new
 feature. 
 </p>
-</li></ul>
+</ul>
 
  
 
@@ -426,7 +432,7 @@ directly in non-linear regression with <code>nls</code>. These functions
 were implemented because they were found good for species-area
 models by Dengler (<EM>J. Biogeogr.</EM> 36, 728-744; 2009).
 </p>
-</li></ul>
+</ul>
 
  
 
@@ -468,7 +474,7 @@ levels in the grouping factor <code>pool</code>.  Now also checks that
 the length of the <code>pool</code> matches the number of
 observations.
 </p>
-</li></ul>
+</ul>
 
  
 
@@ -487,7 +493,7 @@ code was removed in favour of the <span class="pkg">permute</span> package. This
 was not intended for normal use, but packages depending on that
 code in <span class="pkg">vegan</span> should instead depend on <span class="pkg">permute</span>.
 </p>
-</li></ul>
+</ul>
   
  
 
@@ -500,7 +506,7 @@ code in <span class="pkg">vegan</span> should instead depend on <span class="pkg
 <li> <p><code>treeheight</code> uses much snappier code. The results
 should be unchanged.
 </p>
-</li></ul>
+</ul>
 
  
 
